--- a/praca.tex
+++ b/praca.tex
@@ -88,7 +88,8 @@ Można pokazać, że jeżeli rozwiązanie istnieje, można do niego dojść w te
 Ponadto, jeżeli rozwiązanie istnieje to istnieje też rozwiązanie, które nie używa liter innych niż występujące w wyjściowym równaniu~\cite{DBLP:journals/jacm/Jez16}.
 
 
-Całość kodu źródłowego algorytmu w języku Python można znaleźć \\ w publicznym repozytorium: \\ $\hyperlink{https://github.com/kacper776/rownania_slow}{https://github.com/kacper776/rownania\_slow}$
+Całość kodu źródłowego algorytmu w języku Python można znaleźć w publicznym repozytorium: 
+\href{https://github.com/kacper776/rownania\_slow}{https://github.com/kacper776/rownania\_slow}.
 
 \newpage
 \section{Opis algorytmu}
